Bug 393508 - Krita 4.0.1 crashes when creating a canvas
Summary: Krita 4.0.1 crashes when creating a canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.0.1
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 395019 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-25 15:58 UTC by dragonbossplays
Modified: 2018-06-04 10:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-19712-0.html (2.50 KB, text/html)
2018-04-27 09:15 UTC, dragonbossplays
Details
kritacrash.log (414.71 KB, application/octet-stream)
2018-05-07 07:24 UTC, dragonbossplays
Details
attachment-15243-0.html (2.72 KB, text/html)
2018-05-07 08:59 UTC, dragonbossplays
Details
attachment-18842-0.html (1.13 KB, text/html)
2018-05-08 15:37 UTC, dragonbossplays
Details
attachment-17306-0.html (1.65 KB, text/html)
2018-05-09 06:33 UTC, dragonbossplays
Details
attachment-17534-0.html (1.12 KB, text/html)
2018-05-09 06:34 UTC, dragonbossplays
Details
attachment-21725-0.html (1.74 KB, text/html)
2018-05-09 08:54 UTC, dragonbossplays
Details
attachment-4294-0.html (810 bytes, text/html)
2018-05-10 07:24 UTC, dragonbossplays
Details
attachment-9966-0.html (860 bytes, text/html)
2018-05-10 08:33 UTC, dragonbossplays
Details
attachment-32683-0.html (1.34 KB, text/html)
2018-05-10 16:34 UTC, dragonbossplays
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dragonbossplays 2018-04-25 15:58:34 UTC
On Windows 10, Krita 4.0.1 crashes when I try to create a canvas or load a file. I do not get a black canvas but Krita just stops working and Windows closes the program. I have tried turning off Canvas Graphics Acceleration but nothing changed. I have even tried creating a very small canvas (32x32) to see if that would work but it didn't.
Please fix this bug because I can't use Krita anymore.
Comment 1 Halla Rempt 2018-04-27 09:12:48 UTC
Hi,

So, this is unlikely to be related to creating the canvas, if it happens both with and without canvas acceleration enabled. Of course, it's not something that happens for every Windows user... Could you try the following:

* Try to get a crash log. See https://docs.krita.org/Dr._Mingw_debugger
* Try to reset Krita's configuration and see whether it still happens: https://docs.krita.org/KritaFAQ#Resetting_Krita_configuration
Comment 2 dragonbossplays 2018-04-27 09:15:39 UTC
Created attachment 112278 [details]
attachment-19712-0.html

I have resseted Krista's configuration but it still happens, I am sending
this from my phone so I cannot get a crash log right now. I'll send the
crash log later.

On Fri, Apr 27, 2018, 11:12 AM Boudewijn Rempt <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> Boudewijn Rempt <boud@valdyas.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  OS|other                       |MS Windows
>                  CC|                            |boud@valdyas.org
>            Platform|Other                       |MS Windows
>          Resolution|---                         |WAITINGFORINFO
>              Status|UNCONFIRMED                 |NEEDSINFO
>
> --- Comment #1 from Boudewijn Rempt <boud@valdyas.org> ---
> Hi,
>
> So, this is unlikely to be related to creating the canvas, if it happens
> both
> with and without canvas acceleration enabled. Of course, it's not something
> that happens for every Windows user... Could you try the following:
>
> * Try to get a crash log. See https://docs.krita.org/Dr._Mingw_debugger
> * Try to reset Krita's configuration and see whether it still happens:
> https://docs.krita.org/KritaFAQ#Resetting_Krita_configuration
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Halla Rempt 2018-04-27 09:37:25 UTC
Okay, thanks!
Comment 4 dragonbossplays 2018-05-07 07:24:30 UTC
Created attachment 112458 [details]
kritacrash.log

Hi,
I am sorry because it took so long but here'e the crash log.
I couldn't copy paste the whole crash log so I just sent it this way.

2018-04-27 11:37 GMT+02:00 Boudewijn Rempt <bugzilla_noreply@kde.org>:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> --- Comment #3 from Boudewijn Rempt <boud@valdyas.org> ---
> Okay, thanks!
>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 5 Halla Rempt 2018-05-07 07:51:47 UTC
Thanks!
Comment 6 Halla Rempt 2018-05-07 08:24:31 UTC
Hm, this looks like it could have been caused by not having any color palettes available. I've worked around that, and you should be able to test whether that fixes the issue for you with the nightly build for May 8th (https://binary-factory.kde.org/job/Krita_Nightly_Windows_Build/), when it is done.
Comment 7 Halla Rempt 2018-05-07 08:26:19 UTC
Git commit 79a52ba87fc0f0ec76ef427d2def1b36a01031c1 by Boudewijn Rempt.
Committed on 07/05/2018 at 08:23.
Pushed by rempt into branch 'master'.

Fix a possible crash when creating a KoColorPopup action

This could happen if there are no kocolorset objects in the
resource server.

M  +12   -9    libs/widgets/KoColorPopupAction.cpp

https://commits.kde.org/krita/79a52ba87fc0f0ec76ef427d2def1b36a01031c1
Comment 8 dragonbossplays 2018-05-07 08:59:07 UTC
Created attachment 112463 [details]
attachment-15243-0.html

There are 3 links at  https://binary-factory.kde.
org/job/Krita_Nightly_Windows_Build/, which one should I download?

2018-05-07 10:26 GMT+02:00 Boudewijn Rempt <bugzilla_noreply@kde.org>:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> Boudewijn Rempt <boud@valdyas.org> changed:
>
>            What    |Removed                     |Added
> ------------------------------------------------------------
> ----------------
>          Resolution|---                         |FIXED
>              Status|UNCONFIRMED                 |RESOLVED
>       Latest Commit|                            |
> https://commits.kde.org/kri
>                    |
> |ta/79a52ba87fc0f0ec76ef427d
>                    |                            |2def1b36a01031c1
>
> --- Comment #7 from Boudewijn Rempt <boud@valdyas.org> ---
> Git commit 79a52ba87fc0f0ec76ef427d2def1b36a01031c1 by Boudewijn Rempt.
> Committed on 07/05/2018 at 08:23.
> Pushed by rempt into branch 'master'.
>
> Fix a possible crash when creating a KoColorPopup action
>
> This could happen if there are no kocolorset objects in the
> resource server.
>
> M  +12   -9    libs/widgets/KoColorPopupAction.cpp
>
> https://commits.kde.org/krita/79a52ba87fc0f0ec76ef427d2def1b36a01031c1
>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 9 dragonbossplays 2018-05-08 15:37:03 UTC
Created attachment 112506 [details]
attachment-18842-0.html

I don't understand what I have to do, can you explain?

2018-05-08 13:29 GMT+02:00 Boudewijn Rempt <bugzilla_noreply@kde.org>:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> Boudewijn Rempt <boud@valdyas.org> changed:
>
>            What    |Removed                     |Added
> ------------------------------------------------------------
> ----------------
>           Component|CPU Canvas                  |Usability
>             Version|4.1                         |4.0.1
>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 10 dragonbossplays 2018-05-09 06:33:43 UTC
Created attachment 112523 [details]
attachment-17306-0.html

8 May's Nightly Build has failed, what should I do now?

2018-05-08 17:36 GMT+02:00 DragonBossPlays PS4 <dragonbossplays@gmail.com>:

> I don't understand what I have to do, can you explain?
>
> 2018-05-08 13:29 GMT+02:00 Boudewijn Rempt <bugzilla_noreply@kde.org>:
>
>> https://bugs.kde.org/show_bug.cgi?id=393508
>>
>> Boudewijn Rempt <boud@valdyas.org> changed:
>>
>>            What    |Removed                     |Added
>> ------------------------------------------------------------
>> ----------------
>>           Component|CPU Canvas                  |Usability
>>             Version|4.1                         |4.0.1
>>
>> --
>> You are receiving this mail because:
>> You reported the bug.
>>
>
>
Comment 11 dragonbossplays 2018-05-09 06:34:52 UTC
Created attachment 112524 [details]
attachment-17534-0.html

8 May's Nightly Build has failed, what should I do?

2018-05-08 13:29 GMT+02:00 Boudewijn Rempt <bugzilla_noreply@kde.org>:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> Boudewijn Rempt <boud@valdyas.org> changed:
>
>            What    |Removed                     |Added
> ------------------------------------------------------------
> ----------------
>           Component|CPU Canvas                  |Usability
>             Version|4.1                         |4.0.1
>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 12 Halla Rempt 2018-05-09 08:47:14 UTC
I guess I'll reopen the bug then, but I don't know how to fix it in this case. Could you try to reset your configuration and try again? See https://docs.krita.org/KritaFAQ#Resetting_Krita_configuration
Comment 13 dragonbossplays 2018-05-09 08:54:16 UTC
Created attachment 112527 [details]
attachment-21725-0.html

I tried it, but Krita still doesn't work.
I found out something that might help fix the bug, kritaopenglrc doesn't
exist in %LocalAppData%.

2018-05-09 10:47 GMT+02:00 Boudewijn Rempt <bugzilla_noreply@kde.org>:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> Boudewijn Rempt <boud@valdyas.org> changed:
>
>            What    |Removed                     |Added
> ------------------------------------------------------------
> ----------------
>              Status|RESOLVED                    |REOPENED
>          Resolution|FIXED                       |---
>      Ever confirmed|0                           |1
>
> --- Comment #12 from Boudewijn Rempt <boud@valdyas.org> ---
> I guess I'll reopen the bug then, but I don't know how to fix it in this
> case.
> Could you try to reset your configuration and try again? See
> https://docs.krita.org/KritaFAQ#Resetting_Krita_configuration
>
> --
> You are receiving this mail because:
> You reported the bug.
>
Comment 14 Halla Rempt 2018-05-09 08:57:41 UTC
I'm kind of out of clue now. Could you try to start Krita as Administrator?
Comment 15 dragonbossplays 2018-05-10 07:24:25 UTC
Created attachment 112556 [details]
attachment-4294-0.html

What does that mean?

On Wed, May 9, 2018, 10:57 AM Boudewijn Rempt <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> --- Comment #14 from Boudewijn Rempt <boud@valdyas.org> ---
> I'm kind of out of clue now. Could you try to start Krita as Administrator?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 16 Halla Rempt 2018-05-10 08:28:40 UTC
Right-click on the Krita icon and choose "run as administrator"
Comment 17 dragonbossplays 2018-05-10 08:33:22 UTC
Created attachment 112557 [details]
attachment-9966-0.html

Okay, I'm sending this from my phone so I'll try that another time.

On Thu, May 10, 2018, 10:28 AM Boudewijn Rempt <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=393508
>
> --- Comment #16 from Boudewijn Rempt <boud@valdyas.org> ---
> Right-click on the Krita icon and choose "run as administrator"
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 18 dragonbossplays 2018-05-10 16:34:04 UTC
Created attachment 112563 [details]
attachment-32683-0.html

Thank you so much, running it as administrator made it work again.

2018-05-10 10:33 GMT+02:00 DragonBossPlays PS4 <dragonbossplays@gmail.com>:

> Okay, I'm sending this from my phone so I'll try that another time.
>
> On Thu, May 10, 2018, 10:28 AM Boudewijn Rempt <bugzilla_noreply@kde.org>
> wrote:
>
>> https://bugs.kde.org/show_bug.cgi?id=393508
>>
>> --- Comment #16 from Boudewijn Rempt <boud@valdyas.org> ---
>> Right-click on the Krita icon and choose "run as administrator"
>>
>> --
>> You are receiving this mail because:
>> You reported the bug.
>
>
Comment 19 Halla Rempt 2018-05-10 17:28:36 UTC
Okay, thanks for getting back to me. I'm not sure what should be done next -- that really depends on your individual system setup.
Comment 20 Halla Rempt 2018-06-04 10:24:34 UTC
*** Bug 395019 has been marked as a duplicate of this bug. ***
Comment 21 Halla Rempt 2018-06-04 10:25:10 UTC
Git commit b6a0f08ad1509938c0fed7557c9eac4c9915de9a by Boudewijn Rempt.
Committed on 04/06/2018 at 10:24.
Pushed by rempt into branch 'krita/4.0'.

Fix a possible crash when creating a KoColorPopup action

This could happen if there are no kocolorset objects in the
resource server.
(cherry picked from commit 79a52ba87fc0f0ec76ef427d2def1b36a01031c1)

M  +12   -9    libs/widgets/KoColorPopupAction.cpp

https://commits.kde.org/krita/b6a0f08ad1509938c0fed7557c9eac4c9915de9a