Fix a possible crash when creating a KoColorPopup action

This could happen if there are no kocolorset objects in the
resource server.

BUG:393508
(cherry picked from commit 79a52ba87fc0f0ec76ef427d2def1b36a01031c1)