libs/widgets/KoColorPopupAction.cpp
@@ -44,15 +44,18 @@ class KoColorPopupAction::KoColorPopupActionPrivate
 {
 public:
     KoColorPopupActionPrivate()
-        : colorSetWidget(0), colorChooser(0), opacitySlider(0), menu(0), checkerPainter(4)
-        , showFilter(true), applyMode(true), firstTime(true)
+        : colorSetWidget(0)
+        , colorChooser(0)
+        , opacitySlider(0)
+        , menu(0)
+        , checkerPainter(4)
+        , showFilter(true)
+        , applyMode(true)
+        , firstTime(true)
     {}
 
     ~KoColorPopupActionPrivate()
     {
-        delete colorSetWidget;
-        delete colorChooser;
-        delete opacitySlider;
         delete menu;
     }
 
@@ -79,12 +82,12 @@ KoColorPopupAction::KoColorPopupAction(QObject *parent)
     QWidgetAction *wdgAction = new QWidgetAction(d->menu);
     d->colorSetWidget = new KoColorSetWidget(widget);
     KoResourceServer<KoColorSet>* rServer = KoResourceServerProvider::instance()->paletteServer();
+
     QPointer<KoColorSet> defaultColorSet = rServer->resourceByName("Default");
-    if (defaultColorSet) {
-        d->colorSetWidget->setColorSet(defaultColorSet);
-    } else {
-        d->colorSetWidget->setColorSet(rServer->resources().first());
+    if (!defaultColorSet && rServer->resources().count() > 0) {
+        defaultColorSet = rServer->resources().first();
     }
+    d->colorSetWidget->setColorSet(defaultColorSet);
 
     d->colorChooser = new KoTriangleColorSelector( widget );
     // prevent mouse release on color selector from closing popup
